src/components/CartTableItem.scss
.cart-table-item{

    .cart-thumb{
        max-width: 100px;
        width: 100%;
    }

    td{
        padding: 8px;
        border-bottom: 1px solid #e1e1e1;
        text-align: center;
        font-size: 18px;
    }

    .quantity-cell{
        width: 18%;
    }

    .icon-btn{
        display: inline-flex;
        margin: 0 auto;
        align-items: center;
        justify-content: center;
        border: initial;
        color: var(--offWhite);
        border-radius: 4px;
        background-color: var(--brandTealDark);
        height: 35px;
        width: 35px;
        font-size: 25px;
        cursor: pointer;
        transition: background-color 0.3s ease-in;

        &:hover{
            background-color: var(--brandTealDarkest);
        }

        &.edit-cart{
            margin-left: 8px;
        }
    }
    
    .cart-update-quantity{

        .field-contain{
            flex-direction: column;

            label{
                text-align: left;
            }

        }

    }

    @media all and (max-width: 639px) {
        width: 100%;
        display: block;

        &:nth-of-type(even){
            background-color: var(--darkWhite);
        }

        td{
            display: block;
            width: 100%;

            &.align-left-mobile{
                text-align: left;
            }

            &.quantity-cell{
                width: 100%;
            }

            &.mobile-title{
                display: flex;
                justify-content: space-between;
                gap: 6px;

                &::before{
                    content: attr(data-title) ":";
                }

            }

        }
    }

}

